# roxi

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  client.local.yaml  client.yaml  config.toml  local.client.yaml  rustfmt.toml  server.yaml  tomlfmt.toml  wg0.client.conf  wg0.conf  wg0.conf.example  wg0.test.conf
.github/workflows/: ci.yaml
scripts/: apt.sh  boringtun.sh  install.sh  ip-refresh.sh  nat-setup.sh  wg-down.sh  wg-link.sh  wg-symlink.sh  wg-up.sh  wg.sh  wireguard.bash  wireguard.sh
scripts/ci/: cargo-build-deps.sh
sysadmin/: apt.sh
